--- a/docs/zproxyctl.8
+++ b/docs/zproxyctl.8
@@ -54,6 +54,9 @@ The parameters n, m and r refer to the number assigned to a particular listener,
 service and back-end in the listings. A listener number of -1 refers by convention
 to the global context.
 .TP
+\fB\-R\fR
+Reload the WAF rules using the WafRules directives of the configuration file.
+.TP
 \fB\-H\fR
 Try to resolve the addresses to symbolic names. Depending on your configuration,
 this may require an active DNS.
