--- a/docs/zproxy.8
+++ b/docs/zproxy.8
@@ -519,6 +519,18 @@ Add the defined header to the request passed to the back-end server. The header
 is added verbatim. Use multiple \fIAddHeader\fR directives if you need to add more
 than one header.
 .TP
+\fBAddResponseHeader\fR "header: to add"
+Add the defined header to the response passed to the clients. The header
+is added verbatim. Use multiple \fIAddHeader\fR directives if you need to add more
+than one header.
+.TP
+\RemoveResponseHead\fR "header pattern"
+Remove certain headers from the outcomming response, the header sent by the
+backend is not sent to the client. All occurences of the
+matching specified header will be removed. Multiple directives may be specified
+in order to remove more than one header, and the header itself may be a regular
+pattern (though this should be used with caution).
+.TP
 \fBRewriteLocation\fR 0|1|2
 If 1 force
 .B zproxy
