--- a/docs/zproxy.8
+++ b/docs/zproxy.8
@@ -531,6 +531,12 @@ matching specified header will be removed. Multiple directives may be specified
 in order to remove more than one header, and the header itself may be a regular
 pattern (though this should be used with caution).
 .TP
+\ReplaceHeader\fR <Request|Response> <header-name-regex> <header-value-match> <formated-value-replace>
+Replace a header in request or response.
+Example:
+           ReplaceHeader    Request     ^Cookie:        ^Abdess=(.*) 	Test=$1
+           ReplaceHeader	Response	^X-Powered-By: 	(.*)	        Abdess($1)
+.TP
 \fBRewriteLocation\fR 0|1|2
 If 1 force
 .B zproxy
