--- a/docs/zproxy.8
+++ b/docs/zproxy.8
@@ -466,6 +466,10 @@ only to the request path -
 .B zproxy
 will still check that the request is syntactically correct.
 .TP
+\fBErrWAF\fR "filename"
+A file with the text to be displayed if the WAF reject a request.
+Default: "The request was rejected by the server.".
+.TP
 \fBErr414\fR "filename"
 A file with the text to be displayed if an Error 414 occurs.
 Default: "Request URI is too long.".
