--- a/docs/zproxy.8
+++ b/docs/zproxy.8
@@ -519,8 +519,8 @@ pattern (though this should be used with caution).
 \fBReplaceHeader\fR <Request|Response> <header-name-regex> <header-value-match> <formated-value-replace>
 Replace a header in request or response.
 Example:
-           ReplaceHeader    Request     ^Cookie:        ^Abdess=(.*) 	Test=$1
-           ReplaceHeader	Response	^X-Powered-By: 	(.*)	        Abdess($1)
+           ReplaceHeader    Request     ^Cookie:        ^Server=(.*) 	Test=$1
+           ReplaceHeader	Response	^X-Powered-By: 	(.*)	        Server($1)
 .TP
 \fBRewriteLocation\fR 0|1|2
 If 1 force
