--- a/docs/zproxy.8
+++ b/docs/zproxy.8
@@ -518,19 +518,29 @@ pattern (though this should be used with caution).
 .TP
 \fBReplaceHeader\fR <Request|Response> <header-name-regex> <header-value-match> <formated-value-replace>
 Replace a header in request or response.
+.br
 Example:
            ReplaceHeader    Request     ^Cookie:        ^Server=(.*) 	Test=$1
            ReplaceHeader	Response	^X-Powered-By: 	(.*)	        Server($1)
 .TP
 \fBRewriteLocation\fR 0|1|2
-If 1 force
-.B zproxy
-to change the Location: and Content-location: headers in responses. If they
-point to the back-end itself or to the listener (but with the wrong protocol)
-the response will be changed to show the virtual host in the request. Default:
-1 (active).  If the value is set to 2 only the back-end address is compared;
-this is useful for redirecting a request to an HTTPS listener on
-the same server as the HTTP listener.
+This directive changes the Location and Content-Location headers in the responses to show the virtual host that was sent in the request. It can apply the rewrite in two modes:
+.br
+.B 	Backend.
+The rewrite is applied if the location header points to the backend itself. This is useful to mask and hide the backend address.
+.br
+.B 	Listener.
+It rewrites the header if it points to the listener but with  the  wrong  protocol. It is useful for redirecting a request to an HTTPS listener on the same server as the HTTP listener.
+.br
+The value 0 disables this directive.
+.br
+The value 1 (by default) enables the backend and listener rewrites.
+.br
+The value 2 only enables the backend rewrites.
+.br
+.INote: if the URL location contains a hostname,
+.Bzproxy
+.I should be able to resolve it or the rewrite will be skipped.
 .TP
 \fBRewriteDestination\fR 0|1
 If 1 force
