--- a/docs/zproxy.8
+++ b/docs/zproxy.8
@@ -490,7 +490,12 @@ Request maximal size. All requests will be limited to these many bytes. If
 a request contains more data than allowed an error 414 is returned. Default:
 unlimited.
 .TP
-\fBHeadRemove\fR "header pattern"
+\fBAddRequestHeader\fR "header: to add"
+Add the defined header to the request passed to the back-end server. The header
+is added verbatim. Use multiple \fIAddRequestHeader\fR directives if you need to add more
+than one header.
+.TP
+\fBRemoveRequestHeader\fR "header pattern"
 Remove certain headers from the incoming requests. All occurences of the
 matching specified header will be removed. Please note that this filtering
 is done prior to other checks (such as \fIHeadRequire\fR or \fIHeadDeny\fR),
@@ -499,17 +504,12 @@ directives may be specified in order to remove more than one header, and
 the header itself may be a regular pattern (though this should be used with
 caution).
 .TP
-\fBAddHeader\fR "header: to add"
-Add the defined header to the request passed to the back-end server. The header
-is added verbatim. Use multiple \fIAddHeader\fR directives if you need to add more
-than one header.
-.TP
 \fBAddResponseHeader\fR "header: to add"
 Add the defined header to the response passed to the clients. The header
-is added verbatim. Use multiple \fIAddHeader\fR directives if you need to add more
+is added verbatim. Use multiple \fIAddResponseHeader\fR directives if you need to add more
 than one header.
 .TP
-\fBRemoveResponseHead\fR "header pattern"
+\fBRemoveResponseHeader\fR "header pattern"
 Remove certain headers from the outcomming response, the header sent by the
 backend is not sent to the client. All occurences of the
 matching specified header will be removed. Multiple directives may be specified
@@ -776,14 +776,6 @@ Several RewriteUrl directives can be added. All of them will be sequentially app
 .br
 A regex will be applied only once per directive, I.E, the directive `RewriteUrl "/param" "/p"` for the URL `/param/1/param/2` will produce `/p/1/param/2`.
 .TP
-\fBReplaceHeader\fR <Request|Response> <header-name-regex> <header-value-match> <formated-value-replace>
-Replace a header in request or response. If several regex matches in the header, only the first one will apply.
-The replaceHeader directive in the services has priority over the listener one.
-.br
-Example:
-           ReplaceHeader    Request     ^Cookie:        ^Server=(.*) 	Test=$1
-           ReplaceHeader	Response	^X-Powered-By: 	(.*)	        Server($1)
-.TP
 \fBRewriteLocation\fR 0|1|2 [path]
 This directive changes the Location and Content-Location headers in the responses to show the virtual host that was sent in the request. This directive can be defined in a service in order to overwrite the listener value. It can apply the rewrite in two modes:
 .br
@@ -817,6 +809,48 @@ This creates a pattern like
 directives as are specified within the block.  End the block with an
 .I End
 directive.
+.TP
+\fBAddRequestHeader\fR "header: to add"
+This directive overwrites the listener
+.I AdddrequestHeader.
+Add the defined header to the request passed to the back-end server. The header
+is added verbatim. Use multiple \fIAddRequestHeader\fR directives if you need to add more
+than one header.
+.TP
+\fBRemoveRequestHeader\fR "header pattern"
+This directive overwrites the listener
+.I AdddrequestHeader.
+Remove certain headers from the incoming requests. All occurences of the
+matching specified header will be removed. Please note that this filtering
+is done prior to other checks (such as \fIHeadRequire\fR or \fIHeadDeny\fR),
+so you should not try to check for these headers in later matches. Multiple
+directives may be specified in order to remove more than one header, and
+the header itself may be a regular pattern (though this should be used with
+caution).
+.TP
+\fBAddResponseHeader\fR "header: to add"
+This directive overwrites the listener
+.I AdddrequestHeader.
+Add the defined header to the response passed to the clients. The header
+is added verbatim. Use multiple \fIAddResponseHeader\fR directives if you need to add more
+than one header.
+.TP
+\fBRemoveResponseHeader\fR "header pattern"
+This directive overwrites the listener
+.I AdddrequestHeader.
+Remove certain headers from the outcomming response, the header sent by the
+backend is not sent to the client. All occurences of the
+matching specified header will be removed. Multiple directives may be specified
+in order to remove more than one header, and the header itself may be a regular
+pattern (though this should be used with caution).
+.TP
+\fBReplaceHeader\fR <Request|Response> <header-name-regex> <header-value-match> <formated-value-replace>
+Replace a header in request or response. If several regex matches in the header, only the first one will apply.
+The replaceHeader directive in the services has priority over the listener one.
+.br
+Example:
+           ReplaceHeader    Request     ^Cookie:        ^Server=(.*) 	Test=$1
+           ReplaceHeader	Response	^X-Powered-By: 	(.*)	        Server($1)
 .TP
 \fBBackendCookie\fR "cookiename" "domain" "path" age|Session
 If defined, zproxy will inject a cookie in each response with the appropriate backend's key, so that
