ctl: change the default zproxyctl timeout to 20 seconds
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/docs/zproxyctl.8
+++ b/docs/zproxyctl.8
@@ -31,7 +31,7 @@ was configured to listen on for control.
 .TP
 \fB\-t timeout\fR
 timeout to execute the command. The zproxyctl process will exit with error on
-timeout event.
+timeout event. 20 is the default value.
 .TP
 \fB\-L/-l n\fR
 Enable/disable a listener. A disabled listener will stop accepting connection
